--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -64,10 +64,14 @@ dependencies {
 
     // CSL
     // include modApi("earth.terrarium.common_storage_lib:common-storage-lib-fabric-1.21:0.0.5")
-    modImplementation files('common-storage-lib-fabric-1.21-0.0.8.jar')
-    modImplementation files('common-storage-lib-data-fabric-1.21-0.0.9.jar')
-    modImplementation files('common-storage-lib-resources-fabric-1.21-0.0.8.jar')
-    modImplementation files('common-storage-lib-lookup-fabric-1.21-0.0.8.jar')
+    // yeah this is super weird, I have no idea why I have to list the subprojects, and why the include doesn't work here, or why the 0.0.6 jar doesnt work
+    modApi files('common-storage-lib-fabric-1.21-0.0.8.jar')
+    modApi files('common-storage-lib-data-fabric-1.21-0.0.9.jar')
+    modApi files('common-storage-lib-resources-fabric-1.21-0.0.8.jar')
+    modApi files('common-storage-lib-lookup-fabric-1.21-0.0.8.jar')
+
+    // include(files('common-storage-lib-fabric-1.21-0.0.8.jar'))
+
     // JADE (needed for addon)
     modImplementation "curse.maven:jade-324717:5639994"
 
@@ -79,6 +83,10 @@ dependencies {
 
     modRuntimeOnly "org.sinytra:item-asset-export-fabric:1.0.2+1.21"
 
+}
+
+remapJar {
+    nestedJars.from(file('common-storage-lib-fabric-1.21-0.0.6.jar'))
 }
 
 processResources {
