--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -33,6 +33,9 @@ repositories {
         name = 'NeoForged'
         url = 'https://maven.neoforged.net/releases'
     }
+    flatDir {
+        dir './libs'
+    }
 }
 
 dependencies {
@@ -63,7 +66,8 @@ dependencies {
 
     // CSL
     // because CSL currently loads in energized power in a wrong version
-    modRuntimeOnly files('common-storage-lib-neoforge-1.21-0.0.8.jar')
+    include modApi('earth.terrarium.common_storage_lib:common-storage-lib-neoforge-1.21:0.0.8')
+    // modRuntimeOnly files('common-storage-lib-neoforge-1.21-0.0.8.jar')
     modRuntimeOnly files('common-storage-lib-data-neoforge-1.21-0.0.8.jar')
     modRuntimeOnly files('common-storage-lib-resources-neoforge-1.21-0.0.8.jar')
     modRuntimeOnly files('common-storage-lib-lookup-neoforge-1.21-0.0.8.jar')
