--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -42,7 +42,8 @@ dependencies {
 
     // Architectury API. This is optional, and you can comment it out if you don't need it.
     // modImplementation "dev.architectury:architectury-fabric:$rootProject.architectury_api_version"
-    modImplementation "dev.architectury:architectury-fabric:13.0.6" // because gradle is stupid and my local setup is broken somewhere but deleting the cache doesnt seem to fix it
+    modImplementation "dev.architectury:architectury-fabric:13.0.6"
+    // because gradle is stupid and my local setup is broken somewhere but deleting the cache doesnt seem to fix it
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
@@ -111,3 +112,44 @@ remapJar {
 tasks.remapJar {
     injectAccessWidener.set(true)
 }
+
+publishMods {
+    file = remapJar.archiveFile
+    changelog = file("../changelog.md").getText()
+    type = ALPHA
+    modLoaders.add("fabric")
+
+    modrinth {
+        accessToken = providers.environmentVariable("MODRINTH_API_KEY")
+        projectId = "4sYI62kA"
+        minecraftVersions.add("1.21.1")
+        minecraftVersions.add("1.21")
+
+        requires("owo-lib")
+        requires("geckolib")
+        requires("athena-ctm")
+        requires("fabric-api")
+
+        announcementTitle = "Fabric Version on Modrinth"
+    }
+
+    curseforge {
+        accessToken = providers.environmentVariable("CURSEFORGE_API_KEY")
+        projectId = "1030830"
+        minecraftVersions.add("1.21.1")
+        minecraftVersions.add("1.21")
+
+        requires("owo-lib")
+        requires("geckolib")
+        requires("athena")
+        requires("fabric-api")
+
+        javaVersions.add(JavaVersion.VERSION_21)
+        clientRequired = true
+        serverRequired = true
+
+        projectSlug = "oritech"
+        announcementTitle = "Fabric Version on CurseForge"
+    }
+}
+
