--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -103,3 +103,45 @@ tasks.remapJar {
     injectAccessWidener = true
     atAccessWideners.add(loom.accessWidenerPath.get().asFile.name)
 }
+
+
+
+publishMods {
+    file = remapJar.archiveFile
+    changelog = file("../changelog.md").getText()
+    type = ALPHA
+    modLoaders.add("neoforge")
+
+    modrinth {
+        accessToken = providers.environmentVariable("MODRINTH_API_KEY")
+        projectId = "4sYI62kA"
+        minecraftVersions.add("1.21.1")
+        minecraftVersions.add("1.21")
+
+        requires("owo-lib")
+        requires("geckolib")
+        requires("athena-ctm")
+        requires("fabric-api")
+
+        announcementTitle = "Neoforge Version on Modrinth"
+    }
+
+    curseforge {
+        accessToken = providers.environmentVariable("CURSEFORGE_API_KEY")
+        projectId = "1030830"
+        minecraftVersions.add("1.21.1")
+        minecraftVersions.add("1.21")
+
+        requires("owo-lib")
+        requires("geckolib")
+        requires("athena")
+        requires("fabric-api")
+
+        javaVersions.add(JavaVersion.VERSION_21)
+        clientRequired = true
+        serverRequired = true
+
+        projectSlug = "oritech"
+        announcementTitle = "Neoforge Version on CurseForge"
+    }
+}
