Update readme / changelog path

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -115,7 +115,7 @@ tasks.remapJar {
 
 publishMods {
     file = remapJar.archiveFile
-    changelog = file("../changelog.md").getText()
+    changelog = file("../CHANGELOG.md").getText()
     type = ALPHA
     modLoaders.add("fabric")
 
