--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -108,7 +108,7 @@ tasks.remapJar {
 
 publishMods {
     file = remapJar.archiveFile
-    changelog = file("../changelog.md").getText()
+    changelog = file("../CHANGELOG.md").getText()
     type = ALPHA
     modLoaders.add("neoforge")
 
