--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -109,7 +109,7 @@ tasks.remapJar {
 publishMods {
     file = remapJar.archiveFile
     changelog = file("../CHANGELOG.md").getText()
-    type = ALPHA
+    type = BETA
     modLoaders.add("fabric")
 
     modrinth {
