--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -103,7 +103,7 @@ tasks.remapJar {
 publishMods {
     file = remapJar.archiveFile
     changelog = file("../CHANGELOG.md").getText()
-    type = ALPHA
+    type = BETA
     modLoaders.add("neoforge")
 
     modrinth {
