--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -125,6 +125,7 @@ publishMods {
         requires("geckolib")
         requires("athena-ctm")
         requires("fabric-api")
+        requires("architectury-api")
 
         announcementTitle = "Fabric Version on Modrinth"
     }
@@ -139,6 +140,7 @@ publishMods {
         requires("geckolib")
         requires("athena")
         requires("fabric-api")
+        requires("architectury-api")
 
         javaVersions.add(JavaVersion.VERSION_21)
         clientRequired = true
