--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -119,6 +119,7 @@ publishMods {
         requires("geckolib")
         requires("athena-ctm")
         requires("forgified-fabric-api")
+        requires("architectury-api")
 
         announcementTitle = "Neoforge Version on Modrinth"
     }
@@ -133,6 +134,7 @@ publishMods {
         requires("geckolib")
         requires("athena")
         requires("forgified-fabric-api")
+        requires("architectury-api")
 
         javaVersions.add(JavaVersion.VERSION_21)
         clientRequired = true
