--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ fabric_loader_version = 0.16.9
 fabric_api_version = 0.102.1+1.21.1
 neoforge_version = 21.1.73
 yarn_mappings_patch_neoforge_version = 1.21+build.4
+
+# choose emi, rei, jei or disabled, only applies to dev runs
+recipe_viewer=emi
