--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -69,7 +69,7 @@ dependencies {
 
     // recipe viewer runtime
     switch (recipe_viewer.toLowerCase(Locale.ROOT)) {
-        case "emi": modRuntimeOnly "dev.emi:emi-fabric:1.1.12+1.21"; break
+        case "emi": modRuntimeOnly "dev.emi:emi-fabric:${emi_version}"; break
         case "rei": modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:16.0.754"; break
         case "jei": modRuntimeOnly "mezz.jei:jei-1.21.1-fabric:19.21.0.245"
         case "disabled": break
