--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -68,7 +68,7 @@ dependencies {
 
     // recipe viewer runtime
     switch (recipe_viewer.toLowerCase(Locale.ROOT)) {
-        case "emi": modRuntimeOnly "dev.emi:emi-neoforge:1.1.12+1.21"; break
+        case "emi": modRuntimeOnly "dev.emi:emi-neoforge:${emi_version}"; break
         case "rei": modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-neoforge:16.0.754"; break
         case "jei": modRuntimeOnly "mezz.jei:jei-1.21.1-neoforge:19.21.0.245"
         case "disabled": break
